5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_869.log
== TEST (2019-04-11 10:55:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money "))

if(compra>=200):
	print(5% * 200)

-- ERROR:
File "XXXX", line 7
    print(5% * 200)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money "))

if(compra>=200):
	print(5%)

-- ERROR:
File "XXXX", line 7
    print(5%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:20:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print("valor")
else:
	print("compra")
-- OUTPUT:
valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:21:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print("valor")
else:
	print("compra")
-- EXECUTION TIME:
0.241034
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
valor
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
valor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:21:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print("valor")
else:
	print("compra")
-- OUTPUT:
valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra)
-- ERROR:
File "XXXX", line 10
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra))
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:23:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra))
-- EXECUTION TIME:
0.178839
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
0.1
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
0.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 0.05)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra))
-- OUTPUT:
0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 5)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 5)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra))
-- EXECUTION TIME:
0.176304
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:24:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 5)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra, 2))
-- EXECUTION TIME:
0.218265
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.03
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:24:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra = float(input(" money: "))
valor = compra -((compra * 5)/100)
if(compra>=200):
	print(round(compra - valor ,2))
else:
	print(round(compra, 2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco*0.5

if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:53:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco*0.5

if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.194312
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
100.05
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
100.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:54:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco= float(input("compra:"))
valor= preco*0.05

if(preco >= 200):
	print(round(preco-valor,2))
else:
	print(round(preco,2))
-- EXECUTION TIME:
0.220092
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
